apps/ticketing-server/overlays/dev/namespace.yaml
# apps/ticketing-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev # 'dev' 네임스페이스를 생성
